--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
-<html>
-  <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/addons/p5.dom.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-  <body>
-    <style>
-      @import url('https://fonts.googleapis.com/css?family=Sunflower:300&display=swap');
-      </style>
-    <h1><a onClick="window.location.reload()" style="cursor: pointer;">Gravity Cube Class</a></h1>
-    <h2>JavaScript_p5.js OhSejin</h2>
-    <script src="sketch.js"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Live Show</title>
+	<script type="text/javascript" src="https://threejs.org/build/three.min.js"></script>
+	<style>
+		body { margin: 0; }
+        canvas { width: 100%; height: 100% }
+    </style>
+</head>
+<body>
+	<div id="threejs_scene"></div>
+	<!-- My threeJS Javascript codes here -->
+	<script type="text/javascript" src="script.js"></script>
+</body>
 </html>
+ 
