--- a/index.html
+++ b/index.html
@@ -11,8 +11,22 @@
 </head>
 <body>
 	<div id="threejs_scene"></div>
-	<!-- My threeJS Javascript codes here -->
+	 My threeJS Javascript codes here 
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
+<!--
+<!doctype html>
+<html lang="ko">
+  <head>
+	<meta charset="utf-8">
+	<title>CSS</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script type="text/javascript" src="https://threejs.org/build/three.min.js"></script>
+</head>
+<body>
+	<script type="text/javascript" src="script.js"></script>
+</body>
+</html>
+-->
  
