--- a/index.html
+++ b/index.html
@@ -3,30 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Live Show</title>
+	<link rel="stylesheet" href="style.css">
 	<script type="text/javascript" src="https://threejs.org/build/three.min.js"></script>
-	<style>
-		body { margin: 0; }
-        canvas { width: 100%; height: 100% }
-    </style>
+
+    	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-	<div id="threejs_scene"></div>
-	 My threeJS Javascript codes here 
-	<script type="text/javascript" src="script.js"></script>
+<h1>LAB</h1>
+
 </body>
 </html>
-<!--
-<!doctype html>
-<html lang="ko">
-  <head>
-	<meta charset="utf-8">
-	<title>CSS</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script type="text/javascript" src="https://threejs.org/build/three.min.js"></script>
-</head>
-<body>
-	<script type="text/javascript" src="script.js"></script>
-</body>
-</html>
--->
- 
