--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<title>Live Show</title>
-	<link rel="stylesheet" href="style.css">
-	<script type="text/javascript" src="https://threejs.org/build/three.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    	<script type="text/javascript" src="script.js"></script>
+  <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
+  <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
+  <script language="javascript" type="text/javascript" src="unicode.js"></script>
+  <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
+
+  <!-- This line removes any default padding and style.
+       You might only need one of these values set. -->
+       
+  <style>
+body { padding: 0; margin: 0; }
+</style>
 </head>
-<body>
-<h1>LAB</h1>
 
+<body>
 </body>
 </html>
