change back link

--- a/index.html
+++ b/index.html
@@ -1,21 +1,52 @@
 <html>
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
-  <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="unicode.js"></script>
-  <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
+	<!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
 
-  <!-- This line removes any default padding and style.
+	<!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
+
+	<!-- This line removes any default padding and style.
        You might only need one of these values set. -->
-       
-  <style>
-body { padding: 0; margin: 0; }
+
+	<style>
+		body { padding: 0; margin: 0; }
+	  .box{
+		  display: block;
+		  position: fixed;
+		  		  margin: 10px auto;
+		  
+animation: anm 1s ease-in Infinite Alternate;
+		}
+		@keyframes anm{
+		0% {
+	}
+
+	95% {
+			}
+
+	to {
+				background-color: white;
+	}
+}
+	  .box>a{
+		  font-size: 17px;
+		  font-weight: bold;
+		  text-align: center;
+		  		  color: white;
+		  		  text-decoration: none;
+	  }
 </style>
 </head>
+<div class="box">
+	<a href="https://designersejinoh.github.io/SejinOH/">>Back to SejinOH</a>
+</div>
+<script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
+<script language="javascript" type="text/javascript" src="unicode.js"></script>
 
 <body>
 </body>
+
 </html>
