--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
        You might only need one of these values set. -->
 
 	<style>
-		body { padding: 0; margin: 0; }
+		@import url('https://fonts.googleapis.com/css?Saira+Semi+Condensed|family=Sunflower:300&display=swap');
+		
+		body {
+				font-family: 'Noto Sans KR', sans-serif;
+			padding: 0; margin: 0; }
 	  .box{
 		  display: block;
 		  position: fixed;
@@ -32,7 +36,6 @@ animation: anm 1s ease-in Infinite Alternate;
 	}
 }
 	  .box>a{
-		  font-size: 17px;
 		  font-weight: bold;
 		  text-align: center;
 		  		  color: white;
