--- a/index.html
+++ b/index.html
@@ -20,31 +20,31 @@
 	  .box{
 		  display: block;
 		  position: fixed;
-		  		  margin: 10px auto;
 		  
-animation: anm 1s ease-in Infinite Alternate;
+animation: anm 0.7s ease-in Infinite Alternate;
 		}
 		@keyframes anm{
 		0% {
+			left:0px;
 	}
 
 	95% {
 			}
 
 	to {
-				background-color: white;
+		left:5px;
+
 	}
 }
 	  .box>a{
 		  font-weight: bold;
-		  text-align: center;
 		  		  color: white;
 		  		  text-decoration: none;
 	  }
 </style>
 </head>
 <div class="box">
-	<a href="https://designersejinoh.github.io/SejinOH/">>Back to SejinOH</a>
+	<a href="https://designersejinoh.github.io/SejinOH/">Back to SejinOH</a>
 </div>
 <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
 <script language="javascript" type="text/javascript" src="unicode.js"></script>
